<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">Q短信</string>
    <string name="title">Q短信 - </string>
    <string name="action_settings">设置</string>
    <string name="action_feedback">反馈</string>
    <string name="suggest">问题反馈</string>
    <string name="action_about">关于Q短信</string>
    <string name="reply">回复</string>
    <string name="close">关闭</string>
    <string name="markRead">确定</string>
    <string name="delete">删除</string>
    <string name="sendTime">发送时间</string>
    <string name="from">来自</string>
    <string name="at">于</string>
    <string name="smscountleft">您共有</string>
    <string name="smscountright">条未读信息</string>
    <string name="testEnv">亲，点我</string>
    <string name="title_activity_main">Q短信</string>
    <string name="setting">设置Q短信</string>
    <string name="deletescuess">删除短信成功</string>
    <string name="deletesfail">很遗憾，删除短信失败</string>
    <string name="replyTitle">回复</string>
    <string name="testContent">当您收到短信后，短信正文会显示在这里, 感谢您对Q短信的支持！</string>
    <string name="replyBtn">确定</string>
    <string name="cancelBtn">取消</string>
    <string name="messageHint">请输入您要回复的短信内容</string>
    <string name="commTitile">Q短信提醒您</string>
    <string name="contentShortAlert">您没有输入任何信息，短信未被发送</string>
    <string name="known">知道了</string>
    <string name="replyScuess">回复成功</string>
    <string name="replyFail">[Q短信]回复失败</string>
    <string name="noSignal">[Q短信]没有信号,回复失败</string>
    <string name="smsReceived">对方收到您刚发出的短信</string>
    <string name="smsDeliveryFail">短信传输失败</string>
    <string name="viewDetail">查看短信详情</string>
    <string name="detailSender">发送者：</string>
    <string name="detailSendTime">发送时间：</string>
    <string name="detailContent">短信内容：</string>
    <string name="notifyNewTitle">条未读消息</string>
    <string name="feedbackLog">将异常发送给作者</string>
    
    <string-array name="quickDialogMenu">
        <item>回复短信</item>
        <item>呼叫联系人</item>
        <item>查看短信详情</item>
    </string-array>
    
    <string-array name="holoDialogMenu">
        <item>回复短信</item>
        <item>呼叫联系人</item>
        <item>打开系统短信</item>
        <item>删除这条短信</item>
        <item>转发这条短信</item>
        <item>把号码添加到 &#8230;</item>
    </string-array>

    <!-- Settings -->
    <string name="title_activity_settings">Q短信设置</string>
    <string name="qsmsEnable">开启Q短信</string>
    <string name="qsmsEnableDsc">主人，Q短信随时为你服务</string>
    <string name="qsmsDisableDsc">主人，Q短信先行告退了</string>
    <string name="animation">启动与退出效果</string>
    <string name="enableStartAnimation">开始动画</string>
    <string name="enableStartAnimationDsc">打开/关闭开始动画</string>
    <string name="enableStopAnimation">退出动画</string>
    <string name="enableStopAnimationDsc">打开关闭退出动画</string>
    <string name="display">界面与显示</string>
    <string name="displaySumary">控制Q短信弹窗内的按纽是否显示</string>
    <string name="displayCloseBtn">显示关闭按纽</string>
    <string name="displayCloseBtnSumary">关闭后关闭按纽将不会显示在弹窗上面</string>
    <string name="displayReadBtn">显示已读按纽</string>
    <string name="displayReadBtnSumary">关闭后已读按纽将不会显示在弹窗上面</string>
    <string name="displayDelete">显示删除按纽</string>
    <string name="displayDeleteBtnSumary">关闭后删除按纽将不会显示在弹窗上面</string>
    <string name="enableReminder">通知</string>
    <string name="enableReminderSumarry">可设置收到短信后的提醒方式</string>
    <string name="enableVibrate">短信振动</string>
    <string name="enableVoice">启动提示音</string>
    <string name="smsringtone">设置短信铃声</string>
    <string name="configRingtong">设置短信提醒</string>
    <string name="settingRingtoneTip">为了获得更好的体验，建议关闭系统自带短信的提醒功能</string>
    <string name="settingRingtoneTipTitle">爱心提醒</string>
    <string name="enablePrivateSMS">隐私模式</string>
    <string name="enableDisplayHalf">仅显示短信部分内容</string>
    <string name="enableDisplayAll">显示短信全部内容</string>
    <string name="previewSettingTitle">预览效果</string>
    
    <!-- Animation -->
    <string name="startAnimationType">打开动画类型</string>
	<string-array name="startAnimationTitles">
	    <item>渐渐淡入</item>
	    <item>由小变大</item>
	    <item>旋转</item>
	</string-array>
	<string-array name="startAnimationValues">
	    <item>fadeIn</item>
	    <item>scaleIn</item>
	    <item>scaleRotateIn</item>
	</string-array>
    <string name="stopAnimationType">退出动画类型</string>
    <string-array name="stopAnimationTitles">
	    <item>渐渐淡出</item>
	    <item>由大变小</item>
	    <item>旋转</item>
	</string-array>
	<string-array name="stopAnimationValues">
	    <item>fadeOut</item>
	    <item>scaleOut</item>
	    <item>scaleRotateOut</item>
	</string-array>
    
    <!-- Feedback -->
    <string name="feedbackTitle">用户反馈</string>
    <string name="subject">Q短信用户反馈</string>
    <string name="feedbackWarning">请输入您要反馈的问题（最少两个字）</string>
    <string name="feedbackQuestion">您要反馈的问题：</string>
    <string name="feedbackQuestionHint">请输入您要反馈的问题，我们将以此为动力不断改进</string>
    <string name="feedbackthanks">感谢您的参与，我们将尽快处理您提交的问题。</string>
    <string name="feedbackContact">您的联系方式：</string>
    <string name="feedbackContactHint">可选填写，QQ、邮件、电话等</string>
    <string name="comitFeedback">提交</string>
    <string name="confirm">确定</string>
    <string name="feedbackTip">为了更好地解决您的问题，我们会采集您的手机配置，但不涉及其他任何隐私信息。如果您已同意，请点击“提交”上传反馈。</string>

    <!-- Other -->
    <string name="title_activity_about">关于Q短信</string>
    <string name="verstion">Q短信 V1.2.3_Build_201305262333</string>
    <string name="thanks">感谢我的家人和小玲一直以来对我的支持和包容！</string>
    <string name="declare">声明：本软件为个人作品，可自由传播，但请尊重作者版权，切勿用于商业用途。</string>
    <string name="copyright">&#169;2013 nick.chow All Rights Reserved</string>
    <string name="authorContact">联系作者：yunchow@126.com</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="console">Q短信控制台</string>

</resources>