<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enableQSMS"
        android:summaryOn="@string/qsmsEnableDsc"
        android:summaryOff="@string/qsmsDisableDsc"
        android:title="@string/qsmsEnable" />

    <PreferenceCategory
        android:summary="@string/displaySumary"
        android:title="@string/display" >
        <CheckBoxPreference 
            android:key="enablePrivateSMS"
            android:defaultValue="false"
            android:title="@string/enablePrivateSMS"
            android:summaryOn="@string/enableDisplayHalf"
            android:summaryOff="@string/enableDisplayAll"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="displayReadBtn"
            android:title="@string/displayReadBtn" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="displayDeleteBtn"
            android:title="@string/displayDelete" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/configRingtong" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableReminder"
            android:summary="@string/enableReminderSumarry"
            android:title="@string/enableReminder" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enableReminder"
            android:key="enableVibrate"
            android:title="@string/enableVibrate" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enableReminder"
            android:key="enableVoice"
            android:title="@string/enableVoice" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="enableVoice"
            android:key="smsringtone"
            android:ringtoneType="notification"
            android:title="@string/smsringtone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/animation" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableStartAnimation"
            android:summary="@string/enableStartAnimationDsc"
            android:title="@string/enableStartAnimation" />

        <ListPreference
            android:defaultValue="fadeIn"
            android:dialogTitle="@string/startAnimationType"
            android:entries="@array/startAnimationTitles"
            android:entryValues="@array/startAnimationValues"
            android:key="startAnimationTypeValue"
            android:title="@string/startAnimationType" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableStopAnimation"
            android:summary="@string/enableStopAnimationDsc"
            android:title="@string/enableStopAnimation" />

        <ListPreference
            android:defaultValue="scaleOut"
            android:dialogTitle="@string/stopAnimationType"
            android:entries="@array/stopAnimationTitles"
            android:entryValues="@array/stopAnimationValues"
            android:key="stopAnimationTypeValue"
            android:title="@string/stopAnimationType" />
    </PreferenceCategory>

</PreferenceScreen>